--- a/bio.html
+++ b/bio.html
@@ -38,13 +38,12 @@
             >
           </li>
           <li>
-            <a href=""><i class="fa fa-book" aria-hidden="true"></i>Bio</a>
+            <a href="bio.html"
+              ><i class="fa fa-book" aria-hidden="true"></i>Bio</a
+            >
           </li>
           <li>
-            <a href=""
-              ><i class="fa fa-graduation-cap" aria-hidden="true"></i
-              >Education</a
-            >
+            <a href=""><i class="fa fa-star" aria-hidden="true"></i>Skills</a>
           </li>
           <li>
             <a href=""
@@ -60,7 +59,51 @@
         </ul>
       </div>
       <main>
-        <div class="bio-box"></div>
+        <div class="body-box">
+          <br>
+          <br>
+          <span class="code-text">&lt;!DOCTYPE html&gt; </span>
+          <div id="bio-intro">
+            <span class="code-text indent-one">&lt;body&gt; </span>
+            <br />
+            <img src="Images/profile.png" id="profile-pic" />
+            <span class="code-text indent-two">&lt;h2&gt;</span>
+            <br>
+            <h2>&nbsp; &nbsp;NICE TO MEET YOU</h2>
+            <br>
+            <span class="code-text indent-two">&lt;/h2&gt; </span>
+            <br />
+            <span class="code-text indent-two">&lt;p&gt; </span>
+            <p>
+              &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">E</span>ver since I was young, I've enjoyed
+              creating. Whether that be through writing or art, or most
+              recently, through software, my passion to build has been an
+              integral part of my life.
+            </p>
+            <br />
+            <p>
+              &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">T</span>he skills i've acquired through
+              education and hard work, combined with my creative energies, makes
+              me feel like I am right at home in this field.
+            </p>
+            <br />
+            <span class="code-text indent-two">&lt;br /&gt; </span>
+            <br />
+            <p>
+              &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">M</span>otivated and eager to learn, I'm
+              working on channelling my creative passion and software skills
+              into a lifelong career. For the past several months I've been
+              working on freelance projects but currently I am looking to break
+              into a passionate development team.
+            </p>
+            <br />
+
+
+            <br />
+            <span class="code-text indent-two">&lt;/p&gt; </span>
+          </div>
+          <span class="code-text indent-one">&lt;/body&gt; </span>
+          <span class="code-text">&lt;/html&gt; </span>
         <footer>
           <p>copyright 2022</p>
           <p>
