--- a/bio.html
+++ b/bio.html
@@ -19,10 +19,16 @@
     <title>My Portfolio</title>
   </head>
   <body>
+    <!-- *****
+      BACKGROUND
+    ***** -->
     <video autoplay muted loop id="background-video">
-      <source src="Images/Stars.mp4" type="video/mp4" />
+      <source src="Images/StarZoom.mp4" type="video/mp4" />
       Your browser does not support HTML5 video.
     </video>
+    <!-- *****
+      SIDEBAR
+    ***** -->
     <div class="content">
       <input type="checkbox" id="check" />
       <label for="check">
@@ -43,7 +49,9 @@
             >
           </li>
           <li>
-            <a href=""><i class="fa fa-star" aria-hidden="true"></i>Skills</a>
+            <a href="skills.html"
+              ><i class="fa fa-star" aria-hidden="true"></i>Skills</a
+            >
           </li>
           <li>
             <a href=""
@@ -59,58 +67,83 @@
         </ul>
       </div>
       <main>
+        <!-- *****
+        MAIN
+        ***** -->
         <div class="body-box">
-          <br>
-          <br>
+          <br />
+          <br />
           <span class="code-text">&lt;!DOCTYPE html&gt; </span>
+          <!-- *****
+            BIO
+          ***** -->
           <div id="bio-intro">
             <span class="code-text indent-one">&lt;body&gt; </span>
             <br />
             <img src="Images/profile.png" id="profile-pic" />
             <span class="code-text indent-two">&lt;h2&gt;</span>
-            <br>
             <h2>&nbsp; &nbsp;NICE TO MEET YOU</h2>
-            <br>
             <span class="code-text indent-two">&lt;/h2&gt; </span>
             <br />
             <span class="code-text indent-two">&lt;p&gt; </span>
             <p>
-              &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">E</span>ver since I was young, I've enjoyed
-              creating. Whether that be through writing or art, or most
+              &nbsp; &nbsp; &nbsp; &nbsp;
+              <span class="indent-letter">E</span>ver since I was young, I've
+              enjoyed creating. Whether that be through writing or art, or most
               recently, through software, my passion to build has been an
               integral part of my life.
             </p>
             <br />
             <p>
-              &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">T</span>he skills i've acquired through
-              education and hard work, combined with my creative energies, makes
-              me feel like I am right at home in this field.
+              &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">T</span>he
+              skills i've acquired through education and hard work, combined
+              with my creative energies, makes me feel like I am right at home
+              in this field.
             </p>
             <br />
             <span class="code-text indent-two">&lt;br /&gt; </span>
             <br />
             <p>
-              &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">M</span>otivated and eager to learn, I'm
-              working on channelling my creative passion and software skills
+              &nbsp; &nbsp; &nbsp; &nbsp;
+              <span class="indent-letter">M</span>otivated and eager to learn,
+              I'm working on channelling my creative passion and software skills
               into a lifelong career. For the past several months I've been
               working on freelance projects but currently I am looking to break
               into a passionate development team.
             </p>
-            <br />
-
-
-            <br />
             <span class="code-text indent-two">&lt;/p&gt; </span>
+            <br />
+            <!-- *****
+            EDUCATION
+            ***** -->
+            <div class="education-list">
+              <span class="code-text indent-two">&lt;h3&gt; </span>
+              <h3>Education</h3>
+              <span class="code-text indent-two">&lt;/h3&gt; </span>
+              <span class="code-text indent-three">&lt;ul&gt; </span>
+              <span class="code-text indent-four">&lt;li&gt; </span>
+              <ul>
+                <li>Web Immersive @ Hack Reactor</li>
+                <li>Web Development @ Mesa Community College</li>
+              </ul>
+              <span class="code-text indent-four">&lt;/li&gt; </span>
+              <span class="code-text indent-three">&lt;/ul&gt; </span>
+            </div>
           </div>
           <span class="code-text indent-one">&lt;/body&gt; </span>
           <span class="code-text">&lt;/html&gt; </span>
+          <br />
+          <br />
+        </div>
+        <!-- *****
+          FOOTER
+        ***** -->
         <footer>
           <p>copyright 2022</p>
           <p>
             Background by
-            <a
-              href="https://www.pexels.com/@robert-daniel-95408508/?utm_content=attributionCopyText&utm_medium=referral&utm_source=pexels"
-              >Robert Daniel
+            <a href="https://www.pexels.com/@colors-motion-graphics-183847699/"
+              >Colors Motion Graphics
             </a>
           </p>
         </footer>
