added refrences to bio

--- a/bio.html
+++ b/bio.html
@@ -77,7 +77,7 @@
           <!-- *****
             BIO
           ***** -->
-          <div id="bio-intro">
+          <div id="bio-box">
             <span class="code-text indent-one">&lt;body&gt; </span>
             <br />
             <img src="Images/profile.png" id="profile-pic" />
@@ -118,18 +118,58 @@
             ***** -->
             <div class="education-list">
               <span class="code-text indent-two">&lt;h3&gt; </span>
-              <h3>Education</h3>
+              <h3>EDUCATION:</h3>
               <span class="code-text indent-two">&lt;/h3&gt; </span>
-              <span class="code-text indent-three">&lt;ul&gt; </span>
-              <span class="code-text indent-four">&lt;li&gt; </span>
+              <span class="code-text indent-two">&lt;ul&gt; </span>
+              <span class="code-text indent-three">&lt;li&gt; </span>
               <ul>
                 <li>Web Immersive @ Hack Reactor</li>
                 <li>Web Development @ Mesa Community College</li>
+                <li>1001 Video Tutorials @ Youtube</li>
               </ul>
-              <span class="code-text indent-four">&lt;/li&gt; </span>
-              <span class="code-text indent-three">&lt;/ul&gt; </span>
+              <span class="code-text indent-three">&lt;/li&gt; </span>
+              <span class="code-text indent-two">&lt;/ul&gt; </span>
+            </div>
+            <!-- *****
+            REFRENCES
+            ***** -->
+            <div class="links-table">
+              <span class="code-text indent-two">&lt;h3&gt; </span>
+              <h3>REFRENCES:</h3>
+              <span class="code-text indent-two">&lt;/h3&gt; </span>
+              <span class="code-text indent-two">&lt;tb&gt; </span>
+              <span class="code-text indent-three">&lt;tr&gt; </span>
+              <br />
+              <table id="references">
+                <tr>
+                  <th>Name</th>
+                  <th>Job</th>
+                  <th>Email</th>
+                </tr>
+                <tr>
+                  <td>Rick Lupori</td>
+                  <td>
+                    <a href="https://venueinthehills.com/"
+                      >Venue in the Hills</a
+                    >
+                  </td>
+                  <td>ricklupori@gmail.com</td>
+                </tr>
+                <tr>
+                  <td>Shelby Retay</td>
+                  <td>
+                    <a href="https://shelbyweddingsandevents.com/"
+                      >Shelby Weddings and Events</a
+                    >
+                  </td>
+                  <td>shelbyk@cox.net</td>
+                </tr>
+              </table>
             </div>
           </div>
+          <span class="code-text indent-three">&lt;/tr&gt; </span>
+          <span class="code-text indent-two">&lt;/tb&gt; </span>
+          <br />
           <span class="code-text indent-one">&lt;/body&gt; </span>
           <span class="code-text">&lt;/html&gt; </span>
           <br />
