adjusted bio stylings

--- a/bio.html
+++ b/bio.html
@@ -94,6 +94,8 @@
               integral part of my life.
             </p>
             <br />
+            <span class="code-text indent-two">&lt;br /&gt; </span>
+            <br />
             <p>
               &nbsp; &nbsp; &nbsp; &nbsp; <span class="indent-letter">T</span>he
               skills i've acquired through education and hard work, combined
@@ -142,8 +144,8 @@
               <br />
               <table id="references">
                 <tr>
-                  <th>Name</th>
-                  <th>Job</th>
+                  <th>Client Name</th>
+                  <th>Webiste Built</th>
                   <th>Email</th>
                 </tr>
                 <tr>
