--- a/bio.html
+++ b/bio.html
@@ -19,16 +19,12 @@
     <title>My Portfolio</title>
   </head>
   <body>
-    <!-- *****
-      BACKGROUND
-    ***** -->
+    <!-- BACKGROUND -->
     <video autoplay muted loop id="background-video">
       <source src="Images/StarZoom.mp4" type="video/mp4" />
       Your browser does not support HTML5 video.
     </video>
-    <!-- *****
-      SIDEBAR
-    ***** -->
+    <!-- SIDEBAR -->
     <div class="content">
       <input type="checkbox" id="check" />
       <label for="check">
@@ -66,16 +62,12 @@
           </li>
         </ul>
       </div>
+      <!-- MAIN -->
       <main>
-        <!-- *****
-        MAIN
-        ***** -->
         <div class="body-box">
           <br />
           <br />
-          <!-- *****
-            BIO
-          ***** -->
+          <!-- BIO -->
           <div id="bio-box">
             <span class="code-text">&lt;!DOCTYPE html&gt; </span>
             <span class="code-text indent-one">&lt;body&gt; </span>
@@ -115,9 +107,7 @@
             </p>
             <span class="code-text indent-two">&lt;/p&gt; </span>
             <br />
-            <!-- *****
-            EDUCATION
-            ***** -->
+            <!-- EDUCATION -->
             <div class="education-list">
               <span class="code-text indent-two">&lt;h3&gt; </span>
               <h3>EDUCATION:</h3>
@@ -132,9 +122,7 @@
               <span class="code-text indent-three">&lt;/li&gt; </span>
               <span class="code-text indent-two">&lt;/ul&gt; </span>
             </div>
-            <!-- *****
-            REFRENCES
-            ***** -->
+            <!-- REFRENCES -->
             <div class="links-table">
               <span class="code-text indent-two">&lt;h3&gt; </span>
               <h3>REFRENCES:</h3>
@@ -177,9 +165,7 @@
           <br />
           <br />
         </div>
-        <!-- *****
-          FOOTER
-        ***** -->
+        <!-- FOOTER -->
         <footer>
           <p>copyright 2022</p>
           <p>
